# wxWidgets_basic_template

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  main.cpp
MinimalWxExample.app/Contents/: Info.plist
MinimalWxExample.app/Contents/MacOS/: MinimalWxExample
Test.app/Contents/: Info.plist
Test.app/Contents/MacOS/: Test
